优化配置文件命名